# qweather-weather-data

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: filtered_cities.csv
src/: daily_weather.rs  main.rs
tools/: China-City-List-latest.csv  csv_parser.py
