[package]
name = "qweather-weather-data"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
csv = "1.3.1"
dotenvy = "0.15.7"
futures = "0.3.31"
qweather-sdk = "0.4.0"
serde = "1.0.219"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
serde_json = "1.0.140"
